add_library(cscript SHARED
            address.cc
            address.hh
            basic-cscript.cc
            basic-cscript.hh
            cscript.cc
            cscript.hh
            endian.hh
            exception.hh
            instrs/arith.cc
            instrs/cast.cc
            instrs/compare.cc
            instrs/control-flow.cc
            instrs/dereference.cc
            instrs/get-address.cc
            instrs/load.cc
            instrs/load-address.cc
            instrs/logical.cc
            instrs/misc.cc
            instrs/move.cc
            instrs/scratchpad.cc
            instrs/stack.cc
            instrs/thread.cc
            instrs/unary.cc
            instruction-dispatcher.cc
            instruction-dispatcher.hh
            instruction-handler.hh
            instruction-register.hh
            scratchpad.hh
            skit-cscript.cc
            skit-cscript.hh
            skit/backend.hh
            skit/syscalls.cc
            skit/syscalls.hh
            skit/syscall-get-char-pos.cc
            skit/syscall-get-char-pos.hh
            skit/syscall-init.cc
            skit/syscall-init.hh
            skit/syscall-init-char.cc
            skit/syscall-init-char.hh
            skit/syscall-say.cc
            skit/syscall-say.hh
            skit/syscall-set-char-pos.cc
            skit/syscall-set-char-pos.hh
            skit/syscall-unknown.cc
            skit/syscall-unknown.hh
            skit/syscall-wait.cc
            skit/syscall-wait.hh
            stack.hh
            thread-context.cc
            thread-context.hh
            type.cc
            type.hh
            utils.hh
            variable.cc
            variable.hh)
