add_library(cscript SHARED
            address.cc
            address.hh
            basic-cscript.cc
            basic-cscript.hh
            cscript.cc
            cscript.hh
            endian.hh
            exception.hh
            instrs/arith.cc
            instrs/cast.cc
            instrs/compare.cc
            instrs/control-flow.cc
            instrs/dereference.cc
            instrs/get-address.cc
            instrs/load.cc
            instrs/load-address.cc
            instrs/logical.cc
            instrs/misc.cc
            instrs/move.cc
            instrs/scratchpad.cc
            instrs/stack.cc
            instrs/thread.cc
            instrs/unary.cc
            instruction-dispatcher.cc
            instruction-dispatcher.hh
            instruction-handler.hh
            instruction-register.hh
            scratchpad.hh
            tos2-skit-cscript.cc
            tos2-skit-cscript.hh
            tos2-skit/backend.hh
            tos2-skit/syscalls.cc
            tos2-skit/syscalls.hh
            tos2-skit/syscall-get-char-pos.cc
            tos2-skit/syscall-get-char-pos.hh
            tos2-skit/syscall-init.cc
            tos2-skit/syscall-init.hh
            tos2-skit/syscall-init-char.cc
            tos2-skit/syscall-init-char.hh
            tos2-skit/syscall-say.cc
            tos2-skit/syscall-say.hh
            tos2-skit/syscall-set-char-pos.cc
            tos2-skit/syscall-set-char-pos.hh
            tos2-skit/syscall-unknown.cc
            tos2-skit/syscall-unknown.hh
            tos2-skit/syscall-wait.cc
            tos2-skit/syscall-wait.hh
            tog-skit-cscript.cc
            tog-skit-cscript.hh
            tog-skit/backend.hh
            tog-skit/syscalls.cc
            tog-skit/syscalls.hh
            tog-skit/syscall-random.cc
            tog-skit/syscall-random.hh
            tog-skit/syscall-strings.cc
            tog-skit/syscall-strings.hh
            tog-skit/syscall-unknown.cc
            tog-skit/syscall-unknown.hh
            stack.hh
            thread-context.cc
            thread-context.hh
            type.cc
            type.hh
            utils.hh
            variable.cc
            variable.hh)
